--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   fluttertoast: ^8.2.1
   dependencies:
   flutter_volume_controller: ^1.2.5
+  firebase_database: ^10.1.1
+  image_picker: ^0.8.7+4
 
   url_launcher: ^6.1.10
 
