--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
   provider: ^6.0.5
+  syncfusion_flutter_datagrid: ^20.4.54
 
 dev_dependencies:
   flutter_test:
