--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
   assets:
     - assets/fonts/images/stonkpic.png
     - assets/fonts/images/sharemarket.jpg
+    - assets/fonts/images/stock.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
