--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,6 @@ dependencies:
   google_nav_bar: ^5.0.6
   provider: ^6.0.5
   syncfusion_flutter_datepicker: ^20.4.54
-  
-  
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +54,6 @@ dev_dependencies:
   url_launcher: ^6.1.10
   flutter_lints: ^2.0.0
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -67,7 +64,8 @@ flutter:
   assets:
     - assets/fonts/images/stonkpic.png
     - assets/fonts/images/sharemarket.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/fonts/images/stock.jpg
+  #
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
