--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_nav_bar: ^5.0.6
   provider: ^6.0.5
   syncfusion_flutter_datepicker: ^20.4.54
+  local_auth: ^2.1.0
+  flutter_html: ^2.2.1
+  flutter_local_notifications: ^9.1.4
 
 dev_dependencies:
   flutter_test:
